<resources>
    <string name="app_name">We\'re ECyD</string>
    <string name="action_settings">Settings</string>

    <!--Activities-->
    <string name="title_activity_register" translatable="false">RegisterActivity</string>
    <string name="title_activity_main">Somos ECyD</string>
    <string name="title_activity_team_info" translatable="false">TeamInfoActivity</string>

    <!--EditText-->
    <string name="username_input_hint">Username</string>
    <string name="password_input_hint">Password</string>
    <string name="password_cofirm_input_hint">Confirm Password</string>
    <string name="name_input_hint">Name</string>
    <string name="team_name_input_hint">Team name</string>
    <string name="kid_name_input_hint">Kid name</string>

    <!--Text-->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_message">New user registered</string>
    <string name="login_message">Welcome back </string>
    <string name="assistance">Assistance</string>
    <string name="talk">Talk</string>

    <!--Menu Actions-->
    <string name="action_log_out">Log out</string>

    <!--Dialogs-->
    <string name="dialog_add_team_title">Add Team</string>
    <string name="dialog_add_kid_title">Add kid</string>

    <!--Errors-->
    <string name="username_input_error">Please enter a username</string>
    <string name="password_input_error">Please enter a password</string>
    <string name="password_input_match_error">Passwords don\'t match</string>
</resources>
